@@ -3,6 +3,7 @@ X-editable changelog
 
 Version 1.4.5 wip
 ----------------------------
+[enh] added `submitValue` to `save` event params (vitalets)
 [enh #259] allow `getValue` method to return value itself, not object (vitalets)
 [enh] add `destroy` method to inputs (vitalets)
 [enh #164] allow emptytext to be html (vitalets)
